[tool.poetry]
name = "flowsterdb"
version = "0.1.0"
description = ""
authors = ["Felix <flex89@web.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
sqlalchemy = "^2.0.38"


[tool.poetry.group.dev.dependencies]
ipython = "^8.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
